--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -5986,13 +5986,26 @@ input.radio, select.radio {
 
 .property_box .property_tile_info .prop-title {
   font-family: "Copernicus-MediumItalic";
-  font-size: 18px;
-  line-height: 27px; }
+  line-height: 21px;
+  font-size: 14px; }
+
+@media (min-width: 480px) {
+  .property_box .property_tile_info .prop-title {
+    font-family: "Copernicus-MediumItalic";
+    font-size: 15px;
+    line-height: 21.75px; } }
 
 .property_box .property_tile_info .prop-price, .property_box .property_tile_info .bottom-info, .property_box .property_tile_info .prop-details, .property_box .property_tile_info .prop-location, .property_box .property_tile_info .price, .property_box .property_tile_info .currency, .property_box .property_tile_info .ownership, .property_box .property_tile_info .sqft-details {
   font-family: "Copernicus-Medium";
-  font-size: 15px;
-  line-height: 21.75px; }
+  font-size: 12px;
+  line-height: 14.4px;
+  font-weight: 700; }
+
+@media (min-width: 480px) {
+  .property_box .property_tile_info .prop-price, .property_box .property_tile_info .bottom-info, .property_box .property_tile_info .prop-details, .property_box .property_tile_info .prop-location, .property_box .property_tile_info .price, .property_box .property_tile_info .currency, .property_box .property_tile_info .ownership, .property_box .property_tile_info .sqft-details {
+    font-family: "Copernicus-Medium";
+    font-size: 15px;
+    line-height: 21.75px; } }
 
 .property_box .property_tile_info .sqft-details {
   display: inline-block; }
@@ -6023,7 +6036,11 @@ input.radio, select.radio {
   color: #25282A; }
 
 .gm-style-iw .property_box {
-  width: 300px; }
+  width: 225px; }
+
+@media (min-width: 480px) {
+  .gm-style-iw .property_box {
+    width: 300px; } }
 
 .neighborhood-tile {
   padding: 10px;
